<resources>
    <string name="app_name">Q-Tickets</string>
    <string name="fb_testing_app_id">1784746141742357</string>
    <string name="fb_testing_login_protocal">fb2112031845717000</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loading">Loading.........</string>
    <string name="internet">Check your Internet connection</string>
    <string name="noresponse">We are unable to communicate with Server right now, Please try after some time..</string>
    <string name="ok">OK</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="about">About Us</string>
    <string name="version">Version</string>
    <string name="login_succ">Sign in Successful</string>
    <string name="email">Email</string>
    <string name="info">info@q-tickets.com</string>
    <string name="subject">Subject</string>
    <string name="message">Message*</string>
    <string name="emailid">Email ID*</string>
    <string name="phone">Phone</string>
    <string name="name">Name*</string>
    <string name="phone_number">+974-44661996</string>
    <string name="phone_number_dubai">+971508890218</string>
    <string name="nav_myaccount">My Account</string>
    <string name="nav_mybook">My Bookings</string>
    <string name="nav_contactus">Contact Us</string>
    <string name="nav_notification">Notifications</string>
    <string name="nav_newsfeed">News Feed</string>
    <string name="nav_rateus">Rate Us</string>
    <string name="nav_share">Share</string>
    <string name="nav_tc">Terms and Conditions</string>
    <string name="faqs">FAQ</string>
    <string name="privacyandpolicy">Privacy Policy</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="logout">Sign out</string>
    <string name="share_title">Buy movie,event tickets, check Movie show timings, showtimes, schedule, reviews, news. You can also book tickets for Events, Plays, Sports, Theater, Music concerts &amp; Film festivals.</string>
    <string name="explore">Explore Categories</string>
    <string name="movies">MOVIES</string>
    <string name="events">EVENTS</string>
    <string name="sports">SPORTS</string>
    <string name="leisure">LEISURE</string>
    <string name="s_Movies">Movies</string>
    <string name="Seeall">See All</string>
    <string name="s_Events">Events</string>
    <string name="t_new">NEW</string>
    <string name="book">BOOK NOW</string>
    <string name="filters">FILTERS</string>
    <string name="venues">VENUES</string>
    <string name="welcome">Welcome</string>
    <string name="please">Enter the world of endless entertainment</string>
    <string name="foryour">For Your Night!</string>
    <string name="loginwith">Sign in with Facebook</string>
    <string name="donthave">Don\'t have an account ? </string>
    <string name="signup">  Sign up</string>
    <string name="nav_signup">Sign up</string>
    <string name="nav_login">Sign in /</string>
    <string name="username">Username</string>
    <string name="password">Password *</string>
    <string name="confpassword">Confirm Password *</string>
    <string name="forgotpass">Forgot Your Password ?</string>
    <string name="by">By sign in, you agree to the</string>
    <string name="qtickets"> of Q-Tickets</string>
    <string name="login">SIGN IN</string>
    <string name="alert">You are not Sign-in, please Sign in to add your review</string>
    <string name="alert_cov_en">Following the instructions of the Supreme Committee for Crisis Management
regarding the implementation of the new precautionary measures to limit the
spread of Covid-19 virus, please note that unvaccinated people are
not allowed to enter the cinemas. Children below 12 years old are allowed in
The Pearl and Souq Waqif Novo Cinemas only.</string>
    <string name="alert_cov_en_t">DEAR GUESTS,</string>
    <string name="alert_cov_ar_t">ضيوالكرام,</string>
    <string name="alert_cov_ar">بناء على توجيهات اللجنة العليا لإدارة الأزمات بشان تطبيق الإجراءات الاحترازية الجديدة الخاصة بمواجهة الحد من انتشار فيروس كوفيد. 19يرجى العلم بأنه لن يسمح بدخول الأشخاص الغير محصنين  كما يسمح للأطفال اللذين تبلغ أعمارهم من 12  عامة وما دون من دخول دور السينما فقط في اللؤلؤة وسوق واقف</string>
    <string name="login_alert">Sign in Required</string>
    <string name="loginorregis">Sign in</string>
    <string name="guest">Welcome Guest</string>
    <string name="s_sports">Sports</string>
    <string name="s_liesure">Leisure</string>
    <string name="date">seleteddate</string>
    <string name="mall">selectedmall</string>
    <string name="booking_details">Booking Details</string>
    <string name="select_payment">Select Payment</string>
    <string name="name_filter">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="voucher_filter">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="dohabankoffer">DOHA BANK CARD DETAILS</string>
    <string name="paynow">Pay Now</string>
    <string name="screen">SCREEN</string>
    <string name="nowshowing">NOW SHOWING</string>
    <string name="topmovies">TOP MOVIES</string>
    <string name="cominsoon">COMING SOON</string>
    <string name="watch">Watch Trailer</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="filter">Filters</string>
    <string name="price">Price Range</string>
    <string name="days">Days</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="weekend">Weekend</string>
    <string name="select">Select a date range</string>
    <string name="apply">Apply Filter</string>
    <string name="startdate">Select start date</string>
    <string name="enddate">Select end date</string>
    <string name="min">Min QAR.</string>
    <string name="max">Max QAR.</string>
    <string name="youremail">Email</string>
    <string name="enterphoneno">Enter Phone Number</string>
    <string name="savechanges">SAVE CHANGES</string>
    <string name="myprofile">MY PROFILE</string>
    <string name="crop">your device doesn\'t support the crop action!</string>
    <string name="action">Select Action</string>
    <string name="photo">Select Photo From Gallery</string>
    <string name="capture">Capture Photo From Camera</string>
    <string name="wantto">Do you want to update profile picture ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="v_name">Please Enter Name</string>
    <string name="v_email">Please Enter Email</string>
    <string name="v_country">Please Select Country Code</string>
    <string name="v_national">Please Select Nationality</string>
    <string name="v_number">Please Enter Mobile Number</string>
    <string name="validphonenumber">Please Enter Valid  Mobile Number</string>
    <string name="inmobile">Invalid Mobile Number</string>
    <string name="invalidemail">Invalid Email Address</string>
    <string name="change_password">Change Password?</string>
    <string name="confirm_code">Confirmation Code:</string>
    <string name="thertre_name">Theatre Name</string>
    <string name="selct_sts">Select Seats:</string>
    <string name="Total_amt">Total Amount:</string>
    <string name="valid_name">Please Enter Name</string>
    <string name="valid_subject">Please Enter Subject</string>
    <string name="valid_message">Please Enter Message</string>
    <string name="error">Something went wrong</string>
    <string name="c_share">SHARE</string>
    <string name="user_registered_succ">User registered successfully</string>
    <string name="successwewill">Success! We will get back to you as soon as we can.</string>
    <string name="show">SHOW TIMINGS</string>
    <string name="summary">SUMMARY</string>
    <string name="reviews">USER REVIEWS</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="sold">Sold Out</string>
    <string name="available">Available</string>
    <string name="filling">Filling Fast</string>
    <string name="noshows">No Shows Available</string>
    <string name="yourrating">YOUR RATING</string>
    <string name="reviewtitle">REVIEW TITLE</string>
    <string name="highlight">Highlight what you particularly liked</string>
    <string name="txt_continue">CONTINUE</string>
    <string name="nooftickets">Select No. of Tickets</string>
    <string name="see">See</string>
    <string name="share">Share</string>
    <string name="alllaunguages">All Languages</string>
    <string name="cinemahall">All Cinemas</string>
    <string name="c_submit">SUBMIT</string>
    <string name="e_rating">Please Add Ratings</string>
    <string name="e_re_title">Please Add Review Title</string>
    <string name="e_re_summ">Please Add Review Summary</string>
    <string name="re_success">Thank you for your reviews</string>
    <string name="re_error">Sorry There is an problem with uploading reviews try later</string>
    <string name="alredy">Already have an account ? </string>
    <string name="repeat">Confirm Password</string>
    <string name="privacy">Privacy Policy</string>
    <string name="of">of Q-Tickets</string>
    <string name="c_signup">SIGN UP</string>
    <string name="pass_valid">Please enter password</string>
    <string name="username_valid">Please enter Email ID</string>
    <string name="enterphone_number">Please enter Phone Number</string>
    <string name="username_valid1">Please enter valid Email ID</string>
    <string name="invalid">Invalid Credentials</string>
    <string name="forgot">Please Enter Your Email Address</string>
    <string name="submit">Submit</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="current_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_ass">Confirm Password</string>
    <string name="attention">Disclaimer</string>
    <string name="max_4d">1.Throughout the movie your seat will move with the action on screen.\n 2.Please remain seated with your feet on top of the footrest during the entire movie.\n 3.If you need to get in or out of your seat, please exercise caution and care as your seat and the seats around you may be moving.\n 4.You must be at least 40” tall and be able to sit and support yourself to enjoy this experience.\n 5.Please only 1 person per seat, no lap sitting allowed.\n 6.This experience may not be appropriate for people who may be pregnant, have heart, back, head, leg, or neck conditions, or other physical limitations, or those that may have reactions to scents, fog, or strobe lighting effects.\n  If you have any questions or concerns about this MX4D® Motion EFX Theatre, please contact theatre management staff before the movie begins\n\n1.خلال الفعالية سوف يتحرك المقعد مع رد فعل الشاشة.\n2.الرجاء البقاء جالسا مع وضع القدم في المكان المخصص لوضع القدمين مع تأثير الشاشة.\n3.إذا أردت الجلوس أو الخروج من المقعد الرجاء اتباع التعليمات والانتباه حيث المقعد قد يكون متحركا ً أو المقاعد المحيطه به قد تكون تتحرك.\n4.يجب أن يكون طولك على الأقل 40 إنش حيث يمكنك الجلوس ومساعدة نفسك حتى تستطيع الاستمتاع بالفلم.\n5.الرجاء الالتزام بشخص واحد فقط لكل مقعد، ممنوع حمل الاطفال\n6.التجربة قد تكون غير ملائمة للحوامل، المصابين بأمراض القلب، الظهر، الرأس، الساق، أو العنق، بالاضافة إلى الحركات الجسدية المحدودة ، أو لأولئك الذين لهم رد فعل ضد الروائح، البخار أو التأثيرات الضوئية .أذا كان لديك أي سؤال أو استفسار بخصوص عرض MX4D  المسرحي الرجاء التواصل مع طاقم الأدارة قبل بدء الفلم.</string>
    <string name="max_4d_ok">OK</string>
    <string name="signin">Sign in</string>
    <string name="logintoyouracc">Sign in to your account</string>
    <string name="signinhint">Email Id</string>
    <string name="txt_or">or</string>
</resources>